--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -23,8 +23,8 @@
     "assets/"
   ],
   "scripts": {
-    "build": "tsc",
-    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json"
+    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json",
+    "compile:watch": "yarn compile -w --preserveWatchOutput"
   },
   "publishConfig": {
     "access": "public"
