--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -21,8 +21,8 @@
   "types": "./dist/types/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "tsc",
-    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json"
+    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json",
+    "compile:watch": "yarn compile -w --preserveWatchOutput"
   },
   "files": [
     "dist/",
